# ORION

./: .gitignore  LICENSE  README.md  main.py  orion_commands  orion_commands_initialisation.md
CPP Practice/: main  main.cpp
Documenting/: initialprogresscheck-2026-03-31_22.11.32.mkv
Simulation/: CMakeLists.txt  gui_main.cpp  main.py  main_jacobian.py
orion_ws/: WORKFLOW_README.md  dev_workflow.sh  orion_aliases.sh
orion_ws/install/: local_setup.sh  setup.sh
orion_ws/install/orion_description/share/ament_index/resource_index/package_run_dependencies/: orion_description
orion_ws/install/orion_description/share/ament_index/resource_index/parent_prefix_path/: orion_description
orion_ws/install/orion_description/share/orion_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
orion_ws/install/orion_description/share/orion_description/cmake/: orion_descriptionConfig-version.cmake  orion_descriptionConfig.cmake
orion_ws/install/orion_description/share/orion_description/environment/: ament_prefix_path.dsv  path.dsv
orion_ws/install/orion_description/share/orion_description/launch/: display.launch.py
orion_ws/install/orion_description/share/orion_description/urdf/: orion.urdf
orion_ws/install/orion_description/share/orion_description/xacro/: orion.xacro
orion_ws/log/: latest_build
orion_ws/src/kinematics_solver/: CMakeLists.txt
orion_ws/src/kinematics_solver/include/: forward_kinematics.hpp  inverse_kinematics.hpp  pwm_output.hpp  robot_model.hpp  trajectory_optimiser.hpp  types.hpp
orion_ws/src/kinematics_solver/src/: forward_kinematics.cpp  ik_playground.cpp  ik_test.cpp  inverse_kinematics.cpp  main.cpp  pwm_output.cpp  pwm_output_test.cpp  robot_model.cpp  test_fk.cpp  trajectory_optimiser.cpp  trajectory_optimiser_test.cpp  unit_test.cpp
orion_ws/src/mecanum_drive/: CMakeLists.txt  package.xml
orion_ws/src/mecanum_drive/include/mecanum_drive/: mecanum_drive_node.hpp
orion_ws/src/mecanum_drive/src/: mecanum_drive_node.cpp
orion_ws/src/orion_description/: CMakeLists.txt  package.xml
orion_ws/src/orion_description/config/: bridge.yaml  ros2_controllers.yaml
orion_ws/src/orion_description/launch/: debug.launch.py  display.launch.py  gazebo.launch.py
orion_ws/src/orion_description/scripts/: mecanum_ik_node.py  pickup_test.py
orion_ws/src/orion_description/urdf/: orion.urdf
orion_ws/src/orion_description/worlds/: maze.sdf  orion.sdf
orion_ws/src/orion_description/xacro/: arm.xacro  base.xacro  materials.xacro  orion.xacro  sensors.xacro  wheels.xacro
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/orion_description/share/orion_description/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/orion_description/: CMakeLists.txt
ros2_ws/src/orion_description/urdf/: orion.urdf
